[package]
name = "tokio-metrics-cloudwatch"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cloudwatch = "0.6.0"
tokio-metrics = "0.1.0"
tokio = { version = "1.15.0", features = ["time"] }
